--- a/components/feature-card3.html
+++ b/components/feature-card3.html
@@ -36,21 +36,10 @@
   <body>
     <link rel="stylesheet" href="../style.css" />
     <div>
-      <link href="./navigation-links.css" rel="stylesheet" />
-      <nav class="navigation-links-nav">
-        <a href="index.html" class="navigation-links-navlink">
-          <span>Home</span>
-        </a>
-        <a href="deliverables.html" class="navigation-links-navlink1">
-          <span>Deliverables</span>
-        </a>
-        <a href="resources.html" class="navigation-links-navlink2">
-          <span>Resources</span>
-        </a>
-        <a href="source-code.html" class="navigation-links-navlink3">
-          <span>Source Code</span>
-        </a>
-      </nav>
+      <link href="./feature-card3.css" rel="stylesheet" />
+      <div class="feature-card3-feature-card">
+        <h2 class="feature-card3-text"><span>Muhammad Omar</span></h2>
+      </div>
     </div>
   </body>
 </html>
