--- a/index.css
+++ b/index.css
@@ -120,7 +120,7 @@
   justify-content: flex-start;
   background-image: linear-gradient(180deg, rgb(48, 59, 66) 0.00%,rgb(196, 223, 251) 30.00%);
 }
-.home-container1 {
+.home-container01 {
   flex: 0 0 auto;
   width: auto;
   height: auto;
@@ -164,7 +164,7 @@
   align-items: flex-start;
   flex-direction: column;
 }
-.home-container2 {
+.home-container02 {
   width: 100%;
   display: flex;
   align-items: center;
@@ -302,6 +302,110 @@
   padding-top: var(--dl-space-space-halfunit);
   padding-bottom: var(--dl-space-space-halfunit);
 }
+.home-features {
+  width: 100%;
+  display: flex;
+  padding: var(--dl-space-space-threeunits);
+  max-width: var(--dl-size-size-maxwidth);
+  align-items: center;
+  flex-direction: column;
+}
+.home-text28 {
+  font-size: 3rem;
+  margin-bottom: var(--dl-space-space-twounits);
+}
+.home-container03 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.home-container04 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.home-container05 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.home-container06 {
+  flex: 0 0 auto;
+  width: auto;
+  height: 100px;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+}
+.home-container07 {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-text31 {
+  text-align: center;
+}
+.home-container08 {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-text32 {
+  text-align: center;
+}
+.home-container09 {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-text36 {
+  text-align: center;
+}
+.home-container10 {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-text37 {
+  text-align: center;
+}
+.home-container11 {
+  flex: 0 0 auto;
+  width: 200px;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+.home-text38 {
+  text-align: center;
+}
 .home-banner2 {
   width: 100%;
   display: flex;
@@ -311,15 +415,15 @@
   justify-content: space-between;
   background-image: linear-gradient(45deg, rgb(91, 87, 115) 0.00%,rgb(65, 63, 108) 55.00%,rgb(44, 40, 96) 76.00%,rgb(36, 32, 81) 97.00%);
 }
-.home-text28 {
+.home-text41 {
   text-align: center;
   font-weight: 600;
   margin-bottom: var(--dl-space-space-halfunit);
 }
-.home-text29 {
+.home-text42 {
   color: #c52160;
 }
-.home-text30 {
+.home-text43 {
   font-weight: 600;
 }
 .home-link {
@@ -344,6 +448,9 @@
     text-align: center;
   }
   .home-text28 {
+    text-align: center;
+  }
+  .home-text41 {
     text-align: center;
   }
 }
@@ -371,6 +478,13 @@
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
   }
+  .home-features {
+    padding-left: var(--dl-space-space-twounits);
+    padding-right: var(--dl-space-space-twounits);
+  }
+  .home-text28 {
+    text-align: center;
+  }
   .home-banner2 {
     padding-left: var(--dl-space-space-twounits);
     padding-right: var(--dl-space-space-twounits);
@@ -393,6 +507,12 @@
     flex-direction: column;
   }
   .home-banner1 {
+    padding-top: var(--dl-space-space-twounits);
+    padding-left: var(--dl-space-space-unit);
+    padding-right: var(--dl-space-space-unit);
+    padding-bottom: var(--dl-space-space-twounits);
+  }
+  .home-features {
     padding-top: var(--dl-space-space-twounits);
     padding-left: var(--dl-space-space-unit);
     padding-right: var(--dl-space-space-unit);
